# sofia-assistant

./: .gitignore  README.md  main.py  pyproject.toml
datasets/llm/cpt/opus-es/: clean_raw_opus.py
